--- a/src/sass/cards/_cardinfo.scss
+++ b/src/sass/cards/_cardinfo.scss
@@ -2,14 +2,16 @@
  * Card Info Modal
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-.row > .card-groups {
-    min-width: 34px;
-}
-.modal-title > img,
-.card-groups > img {
-    height: 0.9em;
-    top: -2px;
-}
-.modal-title > img:last-child {
-    margin-right: 0.5rem;
+div.modal-content {
+    .row > .card-groups {
+        min-width: 34px;
+    }
+    .modal-title > img,
+    .card-groups > img {
+        height: 0.9em;
+        top: -2px;
+    }
+    .modal-title > img:last-child {
+        margin-right: 0.5rem;
+    }
 }
