--- a/src/sass/cards/_fundsbar.scss
+++ b/src/sass/cards/_fundsbar.scss
@@ -1,58 +1,63 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
- * Footer / Funds Bar
+ * Footer (== Funds Bar)
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+$footer-height: 60px;
 
 html {
     position: relative;
     min-height: 100%;
 }
 body {
-    margin-bottom: 60px; /* Margin bottom by footer height */
+    margin-bottom: $footer-height;
 }
+
 .footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
-}
-@media(min-width: 1200px) {
-    .footer .container-fluid {
-        max-width: 1140px;
-    }
-}
-@media(max-width: 768px) {
-    .footer .row {
-        margin-right: 0;
-    }
-}
-.footer .row {
-    flex-wrap: nowrap;
-}
+    height: $footer-height;
+    line-height: $footer-height; /* Vertically center the text */
 
-.footer .funds-icon svg {
-    font-size: 40px;
-    height: 1em;
-    width: auto;
-    position: relative;
-    top: 14px;
-}
-.footer .funds-icon .nav-link:hover svg.inline-svg .hover-fill {
-    fill: $green !important;
-}
+    @media(min-width: map-get($grid-breakpoints, "xl")) {
+        .container-fluid {
+            max-width: 1140px;
+        }
+    }
+    @media(max-width: map-get($grid-breakpoints, "md")) {
+        .row {
+            margin-right: 0;
+        }
+    }
+    .row {
+        flex-wrap: nowrap;
+    }
 
-.footer a.nav-link {
-    margin: 0;
-    padding: 0;
-}
-.footer p.funds-info-text {
-    line-height: 1;
-    margin: 0;
-    text-align: center;
-}
-.footer p.funds-info-text > span {
-    color: white;
-}
-.footer .funds-icon {
-    min-width: 60px;
+    .funds-icon {
+        min-width: 60px;
+
+        svg {
+            font-size: $footer-height - 20px;
+            height: 1em;
+            width: auto;
+            position: relative;
+            top: 14px;
+        }
+        .nav-link:hover svg.inline-svg .hover-fill {
+            fill: $green !important;
+        }
+    }
+
+    a.nav-link {
+        margin: 0;
+        padding: 0;
+    }
+    p.funds-info-text {
+        line-height: 1;
+        margin: 0;
+        text-align: center;
+    }
+    p.funds-info-text > span {
+        color: $navbar-dark-color;
+    }
 }
