--- a/src/sass/shared/_modal.scss
+++ b/src/sass/shared/_modal.scss
@@ -2,14 +2,12 @@
  * Modal Dialogs
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
- div.modal-dialog {
+// leave some space for top margin, unless we have a really small display
+div.modal-dialog {
     margin-top: 160px;
 }
 @media (max-height: 780px) {
     div.modal-dialog {
-        margin-top: 10px;
+        margin-top: $modal-dialog-margin;
     }
-}
-.modal-backdrop.show {
-    opacity: 0.7;
 }
