--- a/src/sass/cards/_fundsbar.scss
+++ b/src/sass/cards/_fundsbar.scss
@@ -24,7 +24,7 @@ body {
             max-width: 1140px;
         }
     }
-    @media(max-width: map-get($grid-breakpoints, "md")) {
+    @media(max-width: $civbuddy-small-display-threshold) {
         .row {
             margin-right: 0;
         }
