--- a/src/sass/players.scss
+++ b/src/sass/players.scss
@@ -2,6 +2,8 @@
  * CSS specific to the 'players' page (players.html).
  */
 
- @import "variables";
- @import "card-clickable";
- 
+@import "node_modules/bootswatch/dist/darkly/variables";
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "variables";
+@import "card-clickable";
