--- a/src/sass/cards/_civcards.scss
+++ b/src/sass/cards/_civcards.scss
@@ -5,6 +5,13 @@
 $civbuddy-card-credits-info-planned-hover: #777777;
 $civbuddy-card-header-padding-y: (map-get($spacers, 2) + map-get($spacers, 1)) / 2;
 
+.bg-warning-darker {
+    background-color: darken($warning, 15%) !important;
+}
+.bg-success-darker {
+    background-color: darken($success, 15%) !important;
+}
+
 div.card-civbuddy {
 
     /*
@@ -62,14 +69,14 @@ div.card-civbuddy {
             cursor: pointer;
 
             > div.card-header {
-                background-color: lighten($card-cap-bg, 6%);
+                background-color: lighten($card-cap-bg, 14%);
             }
             div.info-button {
                 color: lighten($green, 5%);
             }
             > div.card-nominal-cost {
-                color: lighten($text-muted, 12%);
-                background-color: lighten($card-cap-bg, 12%);
+                color: darken($body-color, 20%);
+                background-color: lighten($card-cap-bg, 20%);
             }
         }
     }
@@ -77,10 +84,10 @@ div.card-civbuddy {
     p.card-credits-info {
         color: $text-muted;
         > span {  /* owned values */
-            color: $body-color;
+            color: lighten($info, 5%);
         }
         > i {   /* planned values */
-            color: $info;
+            color: $success;
         }
     }
     div.card-combined-title {
@@ -124,11 +131,25 @@ div.card-civbuddy {
      * -------- OWNED ---------------------------------------
      */
     &.card-status-owned {
+        div.card-header {
+            background-color: lighten($primary, 5%);
+        }
         div.card-nominal-cost {
+            background-color: lighten($primary, 10%);
             color: $body-color !important;
         }
+        div.card-combined-header:hover {
+            > div.card-header {
+                color: $body-color;
+                background-color: lighten($primary, 20%);
+            }
+            > div.card-nominal-cost {
+                color: $body-color;
+                background-color: lighten($primary, 25%);
+            }
+        }
         div.card-body {
-            padding: 1.1rem 1.25rem;
+            padding: map-get($spacers, 3) $card-spacer-x;
         }
         @media(max-width: $civbuddy-small-display-threshold) {
             p.card-status-expl {
@@ -144,26 +165,50 @@ div.card-civbuddy {
      * -------- PLANNED ---------------------------------------
      */
     &.card-status-planned {
+        div.card-header {
+            background-color: darken($success, 5%);
+        }
+        div.card-nominal-cost {
+            background-color: darken($success, 10%);
+            color: darken($body-color, 20%) !important;
+        }
         div.card-current-cost {
-            background-color: lighten($green, 5%);
+            background-color: darken($success, 5%);
         }
         div.card-body {
             > p.card-status-expl {
                 display: none;
             }
             > p.card-status-expl {
-               color: $gray-400 !important;
+                color: $gray-400 !important;
             }
             p.card-credits-info {
                 color: $body-color;
-                > i {
-                    color: $civbuddy-card-credits-info-planned-hover;
-                }
+                > span { color: $primary; }
+                > i { color: $civbuddy-card-credits-info-planned-hover; }
+            }
+            div.progress > div.bar-planned {
+                background-color: $civbuddy-card-credits-info-planned-hover !important;
             }
         }
         &.hovered {
-            border: $card-border-width solid $info !important;
             cursor: pointer;
+            div.card-combined-title {
+                background-color: lighten($card-cap-bg, 20%);
+                div.card-current-cost {
+                    background-color: lighten($card-cap-bg, 28%);
+                }
+            }
+            div.card-body {
+                background-color: lighten($card-cap-bg, 20%);
+                p.card-credits-info {
+                    > span { color: $info; }
+                    > i { color: $success; }
+                }
+                div.progress > div.bar-planned {
+                    background-color: $success !important;
+                }
+            }
         }
     }
 
@@ -175,18 +220,16 @@ div.card-civbuddy {
             display: none;
         }
         &.hovered {
-            background-color: $green;
-            border: $card-border-width solid $card-border-color !important;
-            color: $body-color;
+            background-color: lighten($card-cap-bg, 20%);
             cursor: pointer;
             p.card-credits-info {
-                color: $body-color;
-                > i {
-                    color: $civbuddy-card-credits-info-planned-hover;
+                color: lighten($text-muted, 20%);
+                > span {  /* owned values */
+                    color: lighten($info, 10%);
                 }
             }
             div.card-current-cost {
-                background-color: lighten($green, 5%);
+                background-color: lighten($card-cap-bg, 28%);
             }
         }
     }
@@ -196,21 +239,20 @@ div.card-civbuddy {
      */
     &.card-status-discouraged {
         &.hovered {
-            background-color: $green;
-            border: $card-border-width solid $card-border-color !important;
             color: $body-color;
+            background-color: lighten($card-cap-bg, 20%);
             cursor: pointer;
             p.card-credits-info {
-                color: $body-color;
-                > i {
-                    color: $civbuddy-card-credits-info-planned-hover;
+                color: lighten($text-muted, 20%);
+                > span {  /* owned values */
+                    color: lighten($info, 10%);
                 }
             }
             div.card-current-cost {
-                background-color: lighten($green, 5%);
+                background-color: lighten($card-cap-bg, 28%);
             }
             div.card-body > p.card-status-expl {
-                color: $gray-400 !important;
+                color: $body-color !important;
             }
         }
     }
