--- a/src/sass/funds.scss
+++ b/src/sass/funds.scss
@@ -42,12 +42,17 @@
     .card-header {
         padding: 0.5rem 1rem;
 
-        .badge-pill {
-            float: right;
+        > span.badge-pill {
+            float: left;
             margin-top: 6px;
+            margin-left: 2em;
         }
         > h4 {
             float: left;
+        }
+        button > span.oi {
+            position: relative;
+            top: 3px;
         }
     }
 
@@ -58,19 +63,23 @@
             display: inline-block;
             width: 30%;
         }
-        .row > .commodity-pts:nth-child(5n+1) {
-            padding-left: 0;
-        }
-
-        .commodity-pts {
-            padding: 0 0.15rem 0.25rem;
-            flex-wrap: nowrap;
-            > button {
-                width: 100%;
-                height: 100%;
-                font-weight: bold;
-                padding-top: 0.5rem;
-                padding-bottom: 0.5rem;
+        .row {
+            > .commodity-pts {
+                padding: 0 0.15rem 0.25rem;
+                flex-wrap: nowrap;
+                > button {
+                    width: 100%;
+                    height: 100%;
+                    font-weight: bold;
+                    padding-top: 0.5rem;
+                    padding-bottom: 0.5rem;
+                }
+            }
+            > .commodity-pts:nth-child(5n+1) {
+                padding-left: 0;
+            }
+            > .commodity-pts:nth-child(5n) {
+                padding-right: 0;
             }
         }
     }
