--- a/_includes/mainHeader.html
+++ b/_includes/mainHeader.html
@@ -1,8 +1,10 @@
 <section class="page-header">
     <div class="titlelion"><img src="{{ site.baseurl }}/images/civbuddy-logo-lion-460x460.png" alt="" /></div>
     <h1 class="project-name">{{ site.name }}</h1>
-    <h2 class="project-tagline">{{ site.description }}</h2>
-    <a href="https://github.com/{{ site.github }}" class="btn">View on GitHub</a>
-    <a href="{{ site.appurl }}" class="btn prime">Start App</a>
-    <a href="https://github.com/{{ site.github }}/zipball/master" class="btn">Get Sources</a>
+    {% if page.isCurrent %}<h2 class="project-tagline">{{ site.description }}</h2>{% else
+    %}<h2 class="project-tagline outdated">[outdated version, <a href="{{ site.baseurl }}/">click here</a> for current]</h2>{% endif %}
+    <a href="https://github.com/{{ site.github }}{% if page.githubPath %}/{{ page.githubPath }}{% endif %}" class="btn">View on GitHub</a>
+    <a href="{{ page.appurl }}" class="btn prime">Start App</a>
+    {% if page.isCurrent %}<a href="{{ site.baseurl }}/v1.html" class="btn">Old version</a>{% else
+    %}<a href="{{ site.baseurl }}/" class="btn">Current Version</a>{% endif %}
 </section>
