Fix margins in right drop-down menu in responsive scenarios Hide display of rule options when there are none

--- a/src/sass/shared/_navbar.scss
+++ b/src/sass/shared/_navbar.scss
@@ -24,7 +24,7 @@ nav.navbar {
         .dropdown-menu {
             position: absolute;
         }
-        .nav-link:hover {
+        a.nav-link:hover {
             color: $green !important; /* seems to be a Bootstrap bug which makes this necessary */
         }
     }
