--- a/resources/include/head.html
+++ b/resources/include/head.html
@@ -37,8 +37,8 @@
     <script type="text/javascript" defer src="js/l20n.min.js"></script>  <!-- should be first deferred script -->
 
     <script id="flagTemplate" type="x-tmpl-mustache">
-        <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, '@@pageName@@', 'switchLanguage', '{{ alt }}')"
-            ><img class="flag mx-2" src="img/{{ fileName }}.svg" alt="{{ alt }}"></img>{{ menuText }}</a>
+        <a class="nav-link" href="#" civbuddy-button="@@pageName@@, switchLanguage, {{ alt }}"><img
+            class="flag mx-2" src="img/{{ fileName }}.svg" alt="{{ alt }}"></img>{{ menuText }}</a>
     </script>
 
     <script id="switchPlayerLinkTemplate" type="x-tmpl-mustache">
