Show lion background only on 'games' and 'players' pages (the other pages are usually too full)

--- a/src/sass/shared/_background.scss
+++ b/src/sass/shared/_background.scss
@@ -2,7 +2,7 @@
  * Background
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-body {
+body.lion-bg {
     background-repeat: no-repeat;
     background-position: center center;
     background-image: url(../img/lion-bg.png);
