Add Google Analytics w/ IP anonymization

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,15 @@
     <meta name="keywords" content="{{ site.name }}, civilization, Francis Tresham, Avalon Hill, board game,
             advanced civilization, western expansion" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    {% if site.gaaccount != '' %}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.gaaccount }}"></script>
+    <script type="text/javascript">
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '{{ site.gaaccount }}', {'anonymize_ip': true});
+    </script>{% endif %}
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
