Update to Bootstrap 4.1.2

--- a/src/sass/cards/_fundsbar.scss
+++ b/src/sass/cards/_fundsbar.scss
@@ -42,7 +42,7 @@ body {
             height: 1em;
             width: auto;
             position: relative;
-            top: 14px;
+            margin-top: 4px;
         }
         .nav-link:hover svg.inline-svg .hover-fill {
             fill: $green !important;
